<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity"
    android:background="@color/myBackground"
    android:fitsSystemWindows="true" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/headerLayout"
        style="@style/HeaderStyle"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:orientation="vertical"
        android:gravity="center_vertical"
        app:layout_constraintTop_toTopOf="parent" >

        <Button
            android:id="@+id/buttonBack"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="260dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="10dp"
            android:text="@string/back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title"
            style="@style/TitleText"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="15dp"
            android:text="@string/settings"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonBack" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <RadioGroup
        android:id="@+id/radioGroupTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerLayout"
        android:layout_marginStart="78dp">

        <RadioButton
            android:id="@+id/radioSystem"
            style="@style/RegularTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/system_mode" />

        <RadioButton
            android:id="@+id/radioLight"
            style="@style/RegularTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/light" />

        <RadioButton
            android:id="@+id/radioDark"
            style="@style/RegularTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dark" />
    </RadioGroup>

    <Button
        android:id="@+id/buttonConfirmTheme"
        style="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_theme"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupTheme"
        android:layout_marginStart="78dp" />

    <RadioGroup
        android:id="@+id/radioGroupLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonConfirmTheme"
        android:layout_marginStart="78dp">

        <RadioButton
            android:id="@+id/radioSpanish"
            style="@style/RegularTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spanish" />

        <RadioButton
            android:id="@+id/radioEnglish"
            style="@style/RegularTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/english" />

        <RadioButton
            android:id="@+id/radioBasque"
            style="@style/RegularTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/basque" />
    </RadioGroup>

    <Button
        android:id="@+id/buttonConfirmLanguage"
        style="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_language"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupLanguage"
        android:layout_marginStart="78dp" />


</androidx.constraintlayout.widget.ConstraintLayout>